# uespec-mcp-public

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/demo/: README.md  prerelease-demo.ps1  prerelease-demo.sh  record-windows-demo.ps1
evals/: README.md  report_template.md  run_eval.py  run_screenshot_eval.py
evals/cases/assertion_failed/case-01-percent-converter/: broken-spec.json  case.json  expected-fix.json  test-spec.json
evals/results/: round5-claude-compile-error.json  round5-claude-compile-error.md
evals/screenshot_cases/: README.md  manifest.json  scorecard-template.json
evals/screenshot_cases/screenshots/: README.md
evals/screenshot_cases/test-specs/: smoke-visible-root.json
examples/: autofix_demo.py  claude_desktop_config.json
src/uespec_mcp/: __init__.py  bridge.py  server.py
src/uespec_mcp/llm/: __init__.py  base.py  factory.py  types.py
src/uespec_mcp/orchestrator/: __init__.py  _json_io.py  core.py  history.py  patch_applier.py  safety.py
src/uespec_mcp/schemas/: uispec.schema.json
src/uespec_mcp/tools/: __init__.py  compile.py  context.py  generate.py  orchestrator.py  surface.py  test.py  validate.py
tests/: _test_baseline.txt  test_assertion_failed_handler.py  test_bridge_mock.py  test_compile_error_handler.py  test_eval_runner.py  test_generate_from_image.py  test_llm_adapter.py  test_orchestrator.py  test_safety.py  test_screenshot_eval_runner.py  test_server.py  test_slate_event_not_handled_handler.py  test_timeout_handler.py  test_widget_missing_handler.py
(+105 files in other folders)
